<resources>
    <string name="app_name">Habit Tracker</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="sign_in">Signin</string>
    <string name="create_an_account">Create Account</string>
    <string name="reenter_password">Reenter Password</string>
    <string name="already_member_sign_in">Already Member ?  Signin</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create">Create</string>
    <string name="continue_with_gmail">Continue With Gmail</string>
    <string name="client_id">234186406559-jq1ue7io80bkcrm1hfrtelomqb951d7h.apps.googleusercontent.com</string>
    <string name="update">Update</string>


    <string-array name="goal">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="goal_rest_frequency">
        <item>Every Day</item>
        <item>Every Week</item>
        <item>Every Month</item>
    </string-array>
    <string-array name="sort_by">
        <item>Date Created</item>
        <item>Name</item>
        <item>Goal Count</item>
    </string-array>


</resources>